Various refactorings suggested by PMD.