@@ -1,17 +1,19 @@
 /*******************************************************************************
-* Copyright (c) 2012 RelationWare, Benno Luthiger
-* All rights reserved. This program and the accompanying materials
-* are made available under the terms of the Eclipse Public License v1.0
-* which accompanies this distribution, and is available at
-* http://www.eclipse.org/legal/epl-v10.html
-*
-* Contributors:
-* RelationWare, Benno Luthiger
-******************************************************************************/
+ * Copyright (c) 2012 RelationWare, Benno Luthiger
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v1.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/epl-v10.html
+ *
+ * Contributors:
+ * RelationWare, Benno Luthiger
+ ******************************************************************************/
 
 package org.ripla.useradmin.admin;
 
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
 
 import java.util.Dictionary;
 import java.util.Enumeration;
@@ -22,134 +24,130 @@ import org.osgi.service.useradmin.User;
 import org.osgi.service.useradmin.UserAdmin;
 
 /**
- * 
- * @author Benno
+ * @author Luthiger
  */
 public class RiplaUserTest {
 	private static final String USER_NAME = "test.user";
-	
-	
+
 	/**
 	 * Test method for {@link org.ripla.useradmin.admin.RiplaUser#getType()}.
-	 * @throws Exception 
+	 * 
+	 * @throws Exception
 	 */
 	@Test
-	public void testGetType() throws Exception {
-		User lUser = TestRiplaUserAdmin.createUser(USER_NAME);
-		assertEquals(Role.USER, lUser.getType());
+	public void testGetType() throws Exception { // NOPMD by Luthiger on
+		final User lUser = TestRiplaUserAdmin.createUser(USER_NAME);
+		assertEquals("Wrong type", Role.USER, lUser.getType());
 	}
-	
+
 	/**
 	 * Test method for {@link org.ripla.useradmin.admin.RiplaRole#getName()}.
-	 * @throws Exception 
+	 * 
+	 * @throws Exception
 	 */
 	@Test
-	public void testGetName() throws Exception {
-		User lUser = TestRiplaUserAdmin.createUser(USER_NAME);
-		assertEquals(USER_NAME, lUser.getName());
+	public void testGetName() throws Exception { // NOPMD by Luthiger on
+		final User lUser = TestRiplaUserAdmin.createUser(USER_NAME);
+		assertEquals("Wrong name", USER_NAME, lUser.getName());
 	}
-	
+
 	/**
-	 * Test method for {@link org.ripla.useradmin.admin.RiplaRole#getProperties()}.
-	 * @throws Exception 
+	 * Test method for
+	 * {@link org.ripla.useradmin.admin.RiplaRole#getProperties()}.
+	 * 
+	 * @throws Exception
 	 */
 	@SuppressWarnings({ "rawtypes", "unchecked" })
-	@Test
-	public void testGetProperties() throws Exception {
-		UserAdmin lUserAdmin = TestRiplaUserAdmin.createUserAdmin();
+	@Test(expected = IllegalArgumentException.class)
+	public void testGetProperties() throws Exception { // NOPMD by Luthiger on
+		final UserAdmin lUserAdmin = TestRiplaUserAdmin.createUserAdmin();
 		User lUser = (User) lUserAdmin.createRole(USER_NAME, Role.USER);
 		Dictionary lProperties = lUser.getProperties();
-		assertTrue(lProperties.isEmpty());
-		
-		String lKey1 = "test.key.1";
-		String lKey2 = "test.key.2";
-		String lValue1 = "String";
-		byte[] lValue2 = new byte[] {'1','2','3'};
+		assertTrue("Properties must be empty", lProperties.isEmpty());
+
+		final String lKey1 = "test.key.1"; // NOPMD
+		final String lKey2 = "test.key.2"; // NOPMD
+		final String lValue1 = "String"; // NOPMD
+		final byte[] lValue2 = new byte[] { '1', '2', '3' };
 		lProperties.put(lKey1, lValue1);
 		lProperties.put(lKey2, lValue2);
-		
+
 		lUser = (User) lUserAdmin.getRole(USER_NAME);
 		lProperties = lUser.getProperties();
-		assertEquals(lValue1, lProperties.get(lKey1));
-		assertEquals(lValue2, lProperties.get(lKey2));
-		
-		Enumeration lKeys = lUser.getProperties().keys();
-		int i = 0;
+		assertEquals("Wrong value", lValue1, lProperties.get(lKey1)); // NOPMD
+		assertEquals("Wrong value", lValue2, lProperties.get(lKey2));
+
+		final Enumeration lKeys = lUser.getProperties().keys();
+		int i = 0; // NOPMD
 		while (lKeys.hasMoreElements()) {
 			lKeys.nextElement();
 			i++;
 		}
-		assertEquals(2, i);
-		
-		try {
-			lProperties.put("test.failing", new Integer(0));
-			fail("shouldn't get here");
-		}
-		catch (IllegalArgumentException exc) {
-			//intentionally left empty
-		}
+		assertEquals("Wrong count", 2, i);
+
+		lProperties.put("test.failing", Integer.valueOf(0));
 	}
 
 	/**
-	 * Test method for {@link org.ripla.useradmin.admin.RiplaUser#getCredentials()}.
-	 * @throws Exception 
+	 * Test method for
+	 * {@link org.ripla.useradmin.admin.RiplaUser#getCredentials()}.
+	 * 
+	 * @throws Exception
 	 */
 	@SuppressWarnings({ "rawtypes", "unchecked" })
-	@Test
-	public void testGetCredentials() throws Exception {
-		UserAdmin lUserAdmin = TestRiplaUserAdmin.createUserAdmin();
+	@Test(expected = IllegalArgumentException.class)
+	public void testGetCredentials() throws Exception { // NOPMD by Luthiger on
+		final UserAdmin lUserAdmin = TestRiplaUserAdmin.createUserAdmin();
 		User lUser = (User) lUserAdmin.createRole(USER_NAME, Role.USER);
 		Dictionary lCredentials = lUser.getCredentials();
-		assertTrue(lCredentials.isEmpty());
-		
-		String lKey1 = "test.credential.1";
-		String lKey2 = "test.credential.2";
-		String lValue1 = "String";
-		byte[] lValue2 = new byte[] {'1','2','3'};
+		assertTrue("Credential must be empty", lCredentials.isEmpty());
+
+		final String lKey1 = "test.credential.1"; // NOPMD
+		final String lKey2 = "test.credential.2"; // NOPMD
+		final String lValue1 = "String"; // NOPMD
+		final byte[] lValue2 = new byte[] { '1', '2', '3' };
 		lCredentials.put(lKey1, lValue1);
 		lCredentials.put(lKey2, lValue2);
-		
+
 		lUser = (User) lUserAdmin.getRole(USER_NAME);
 		lCredentials = lUser.getCredentials();
-		assertEquals(lValue1, lCredentials.get(lKey1));
-		assertEquals(lValue2, lCredentials.get(lKey2));
-		
-		Enumeration lKeys = lUser.getCredentials().keys();
-		int i = 0;
+		assertEquals("Wrong value", lValue1, lCredentials.get(lKey1));
+		assertEquals("Wrong value", lValue2, lCredentials.get(lKey2));
+
+		final Enumeration lKeys = lUser.getCredentials().keys();
+		int i = 0; // NOPMD
 		while (lKeys.hasMoreElements()) {
 			lKeys.nextElement();
 			i++;
 		}
-		assertEquals(2, i);
-		
-		try {
-			lCredentials.put("test.failing", new Integer(0));
-			fail("shouldn't get here");
-		}
-		catch (IllegalArgumentException exc) {
-			//intentionally left empty
-		}
+		assertEquals("Wrong count", 2, i);
+
+		lCredentials.put("test.failing", Integer.valueOf(0));
 	}
 
 	/**
-	 * Test method for {@link org.ripla.useradmin.admin.RiplaUser#hasCredential(java.lang.String, java.lang.Object)}.
-	 * @throws Exception 
+	 * Test method for
+	 * {@link org.ripla.useradmin.admin.RiplaUser#hasCredential(java.lang.String, java.lang.Object)}
+	 * .
+	 * 
+	 * @throws Exception
 	 */
 	@SuppressWarnings({ "rawtypes", "unchecked" })
 	@Test
-	public void testHasCredential() throws Exception {
-		UserAdmin lUserAdmin = TestRiplaUserAdmin.createUserAdmin();
+	public void testHasCredential() throws Exception { // NOPMD by Luthiger on
+		final UserAdmin lUserAdmin = TestRiplaUserAdmin.createUserAdmin();
 		User lUser = (User) lUserAdmin.createRole(USER_NAME, Role.USER);
-		Dictionary lCredentials = lUser.getCredentials();
-		String lKey = "test.credential";
-		String lValue = "secret";
+		final Dictionary lCredentials = lUser.getCredentials();
+		final String lKey = "test.credential"; // NOPMD
+		final String lValue = "secret"; // NOPMD
 		lCredentials.put(lKey, lValue);
-		
+
 		lUser = (User) lUserAdmin.getRole(USER_NAME);
-		assertTrue(lUser.hasCredential(lKey, lValue));
-		assertFalse(lUser.hasCredential(lKey, "top.secret"));
-		assertFalse(lUser.hasCredential(lKey, new Integer(0)));
-		assertFalse(lUser.hasCredential(lKey+".", lValue));
+		assertTrue("Wrong credential", lUser.hasCredential(lKey, lValue)); // NOPMD
+		assertFalse("Wrong credential", lUser.hasCredential(lKey, "top.secret"));
+		assertFalse("Wrong credential",
+				lUser.hasCredential(lKey, Integer.valueOf(0)));
+		assertFalse("Wrong credential", lUser.hasCredential(lKey + ".", lValue));
 	}
 
 }
